--- a/public/css/style.css
+++ b/public/css/style.css
@@ -648,10 +648,14 @@ p.validate-message {
 }
 
 p.correct-responses {
+    text-align: center;
+    width: 500px;
     opacity: 0;
-    margin-bottom: 10px;
+    margin: auto;
+    margin-top: 10px;
     border-radius: 5px;
     padding: 10px;
     font-weight: bold;
     line-height: 25px;
+    background-color: #f2ed28;
 }
